--- a/index.html
+++ b/index.html
@@ -8,15 +8,38 @@
 </head>
 <body>
     <div class="grid-container">
+
         <div class="grid-item navmenu">
             <ul class="nav">
-                <li>Home</li>
-                <li>Second</li>
+                <li class="active" class="font3"><a href="index.html">Home</a></li>
+                <li style="text-align: center;" class="font3"><a href="second.html">Second</a></li>
             </ul>
         </div>
+
         <div class="image1-section grid-item">
             <img height="500px" src="images/Background.jpg">
         </div>
+
+        <div class="main-content1 grid-item">
+            <h2>Main content</h2>
+        </div>
+
+        <div class="support-section1 grid-item">
+            <h2>Support section 1</h2>
+        </div>
+
+        <div class="support-section2 grid-item">
+            <h2>Support section 2</h2>
+        </div>
+
+        <div class="main-content2 grid-item">
+            <h2>Main content 2</h2>
+        </div>
+
+        <div class="side-nav grid-item">
+            <h2>Side Nav</h2>
+        </div>
+        
     </div>
 </body>
 </html>
